--- a/diary/templates/base.html
+++ b/diary/templates/base.html
@@ -9,6 +9,14 @@
 
     <link rel="stylesheet" href="{% static 'vendor/bootstrap/css/bootstrap.min.css' %}">
     <link href="http://fonts.googleapis.com/css?family=Catamaran:100,200,300,400,500,600,700,800,900" rel="stylesheet">
-    <link href=""
+    <link href="https://fonts.googleapis.com/css?family=Lato:100,100i,300,300i,400,400i,700,700i,900,900i" rel="stylesheet">
+    <link href="{% static 'css/one-page-wonder.min.css' %}" rel="stylesheet">
+    <link href="{% static 'css/mystyle.css' %}" rel="stylesheet" type="text/css">
+    {% block head %}{% endblock %}
 </head>
+<body>
+    <div id="wrapper">
+
+    </div>
+</body>
 </html>
